--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">PRM_1_2_generate_random_number</string>
     <string name="can_you_guess_a_number_from_1_to_100">Can you guess a number from 1 to 100?</string>
     <string name="enter_number_here">Enter number here:</string>
-    <string name="take_a_challange">Take a challange!</string>
+    <string name="take_a_challenge">Take a challenge!</string>
     <string name="draw">draw</string>
+    <string name="big_congrats">Congrats!</string>
+    <string name="small_congrats">"Drew number is equal to %d"</string>
+    <string name="big_OhNo">Oh no :(</string>
+    <string name="small_OhNo">"Random number is %d. Try again!"</string>
 </resources>
